Safari overflow fix

--- a/src/components/Pages/HomePage/NavBar/Navbar.css
+++ b/src/components/Pages/HomePage/NavBar/Navbar.css
@@ -9,6 +9,7 @@
   width: 100%;
   /* border: solid blue 1px; */
   max-height: fit-content;
+  overflow: visible;
 }
 
 .hamburger__menu {
